<resources>
    <string name="app_name">বিসিএস ক্যুইজ</string>

    <!--Original-->

    <string name="ad_unit_id">ca-app-pub-5474497946967422/9637950634</string>
    <string name="ad_unit_id_inters">ca-app-pub-5474497946967422/5090248536</string>
    <string name="ad_app_id">ca-app-pub-5474497946967422~6126629778</string>

    <!--TEST Add-->
    <!--<string name="ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_unit_id_inters">ca-app-pub-3940256099942544/1033173712</string>-->

    <!--Navigation Drawer Constant-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
</resources>
