<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.nav.NavFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/large">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/iv_profile" />

            <TextView
                android:id="@+id/name"
                style="@style/NameTextStyle"
                android:layout_below="@+id/iv_profile"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/email"
                style="@style/EmailTextStyle"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/large"
            android:background="@android:color/white">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/item_back"
                android:padding="@dimen/small">

                <ImageView
                    android:layout_width="@dimen/nav_icon"
                    android:layout_height="@dimen/nav_icon"
                    android:src="@drawable/home"
                    android:tint="@color/colorPrimary"
                    android:layout_gravity="center_vertical"
                    android:padding="4dp" />

                <TextView
                    android:text="@string/home"
                    style="@style/NavTextStyle"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/item_back"
                android:padding="@dimen/small">

                <ImageView
                    android:layout_width="@dimen/nav_icon"
                    android:layout_height="@dimen/nav_icon"
                    android:src="@drawable/ic_profile"
                    android:tint="@color/colorPrimary"
                    android:layout_gravity="center_vertical"
                    android:padding="4dp" />

                <TextView
                    android:text="@string/profile"
                    style="@style/NavTextStyle"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/item_back"
                android:padding="@dimen/small">

                <ImageView
                    android:layout_width="@dimen/nav_icon"
                    android:layout_height="@dimen/nav_icon"
                    android:src="@drawable/contact"
                    android:tint="@color/colorPrimary"
                    android:layout_gravity="center_vertical"
                    android:padding="4dp" />

                <TextView
                    android:text="@string/contact_us"
                    style="@style/NavTextStyle"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/item_back"
                android:padding="@dimen/small">

                <ImageView
                    android:layout_width="@dimen/nav_icon"
                    android:layout_height="@dimen/nav_icon"
                    android:src="@drawable/logout"
                    android:tint="@color/colorPrimary"
                    android:layout_gravity="center_vertical"
                    android:padding="4dp" />

                <TextView
                    android:text="@string/log_out"
                    style="@style/NavTextStyle"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>