<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="@dimen/large"
    android:orientation="vertical">

    <ScrollView
        android:layout_marginTop="@dimen/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/medium"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/medium">

                    <RelativeLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:padding="@dimen/small">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/iv_profile"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorPrimary"
                            android:text="Browse"
                            android:clickable="true"
                            android:focusable="true"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:id="@+id/browse"
                            android:visibility="gone"
                            android:background="@drawable/my_ripple"/>

                    </RelativeLayout>



                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/small"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:id="@+id/name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textColor="@android:color/white"
                    android:id="@+id/email"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/medium"
                app:cardCornerRadius="@dimen/small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/medium"
                    android:focusableInTouchMode="true">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ti_name">

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:fontFamily="@font/arima_madurai_medium"
                            android:inputType="textAutoComplete"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ti_contact">

                        <EditText
                            android:id="@+id/et_contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact"
                            android:fontFamily="@font/arima_madurai_medium"
                            android:inputType="phone"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ti_address">

                        <EditText
                            android:id="@+id/et_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:fontFamily="@font/arima_madurai_medium"
                            android:inputType="text"/>

                    </android.support.design.widget.TextInputLayout>



                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>



    <Button
        android:layout_marginTop="@dimen/usual"
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_ripple"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:paddingBottom="@dimen/small"
        android:paddingTop="@dimen/small"
        android:layout_gravity="center_horizontal"/>






</LinearLayout>